Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,12 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'vandelay.com'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "website = \"vandelay.com\"\n",
-    "website = \"vandelay.com\""
+    "website"
    ]
   },
   {
